// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-menu renders custom amount of pages before adding scroll 1`] = `
<c-menu class="c-menu" items-per-page="3">
  <mock:shadow-root>
    <button aria-controls="c-menu-items-be76d841-b23b-4b18-b8b2-414e3683790a" aria-expanded="false" aria-haspopup="listbox" class="c-menu-wrapper" tabindex="0" type="button">
      <div class="c-menu__header">
        <slot></slot>
        <svg class="c-menu__icon" height="22" viewBox="0 0 24 24" width="22">
          <path d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"></path>
        </svg>
      </div>
    </button>
  </mock:shadow-root>
</c-menu>
`;

exports[`c-menu renders default html 1`] = `
<c-menu class="c-menu">
  <mock:shadow-root>
    <button aria-controls="c-menu-items-16af02d2-bb21-4327-a999-b7aa02c463c8" aria-expanded="false" aria-haspopup="listbox" class="c-menu-wrapper" tabindex="0" type="button">
      <div class="c-menu__header">
        <slot></slot>
        <svg class="c-menu__icon" height="22" viewBox="0 0 24 24" width="22">
          <path d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"></path>
        </svg>
      </div>
    </button>
  </mock:shadow-root>
</c-menu>
`;

exports[`c-menu renders no-hover background 1`] = `
<c-menu class="c-menu c-menu--no-hover" nohover="true">
  <mock:shadow-root>
    <button aria-controls="c-menu-items-c7e86815-ab68-487c-9b18-af17eeb0f117" aria-expanded="false" aria-haspopup="listbox" class="c-menu-wrapper" tabindex="0" type="button">
      <div class="c-menu__header">
        <slot></slot>
        <svg class="c-menu__icon" height="22" viewBox="0 0 24 24" width="22">
          <path d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"></path>
        </svg>
      </div>
    </button>
  </mock:shadow-root>
</c-menu>
`;

exports[`c-menu renders simple variant 1`] = `
<c-menu class="c-menu c-menu--simple" simple="true">
  <mock:shadow-root>
    <button aria-controls="c-menu-items-15ba1567-e7e3-49eb-ac5c-e4f22625f5af" aria-expanded="false" aria-haspopup="listbox" class="simple" tabindex="0" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
</c-menu>
`;

exports[`c-menu renders small variant 1`] = `
<c-menu class="c-menu c-menu--small" small="true">
  <mock:shadow-root>
    <button aria-controls="c-menu-items-c45e72fe-c12b-4079-b23b-083ceb820b31" aria-expanded="false" aria-haspopup="listbox" class="c-menu-wrapper" tabindex="0" type="button">
      <div class="c-menu__header">
        <slot></slot>
        <svg class="c-menu__icon" height="16" viewBox="0 0 24 24" width="16">
          <path d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"></path>
        </svg>
      </div>
    </button>
  </mock:shadow-root>
</c-menu>
`;
